--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "mern-eccommerce-app",
   "main": "index.js",
+  "engines" : {
+    "node" : "16.4.0"
+  },
   "scripts": {
     "build": "cd backend && npm install && cd ../frontend && npm install && npm run build",
     "start" : "node backend/server.js",
